# icub-gazebo-legacy

./: CMakeLists.txt  README.md  database.config
ContactTest/: README.txt  database.config  forcescope.xml  table_box.sdf
ContactTest/box/: box.sdf  model.config
conf/: robotMotorGui.ini  yarpmotorgui.ini
double_pendulum/conf/: gazebo_controlboard.ini  robotMotorGui.ini
iCubGenova02/: ConversionProcess.xlsx  convertModel.sh  iCubGenova02.sdf  iCubGenova02.urdf  iCubGenova02NoBattery.urdf  iCubGenova02NoBattery_simmechanics_options.yaml  iCubGenova02_SIM_MODEL.xml  iCubGenova02_joint_parameters.csv  iCubGenova02_simmechanics_options.yaml  model.config
iCubGenova02/conf/: gazebo_iCubGenova02_head.ini  gazebo_iCubGenova02_left_arm.ini  gazebo_iCubGenova02_left_leg.ini  gazebo_iCubGenova02_right_arm.ini  gazebo_iCubGenova02_right_leg.ini  gazebo_iCubGenova02_torso.ini  inertial.ini  robotMotorGui.ini
iCubGenova02_fixed/: icub_fixed.sdf  model.config
iCubHeidelberg01_fixed/: iCubHeidelberg01_fixed.sdf  model.config
iCubHeidelberg01_model/: README.md  convert.sh  iCubHeidelberg01.sdf  iCubHeidelberg01.urdf  iCubHeidelberg01_SIM_MODEL.xml  iCubHeidelberg01_joint_parameters.csv  iCubHeidelberg01_simmechanics_options.yaml  model.config
iCubHeidelberg01_model/conf/: gazebo_iCubHeidelberg01_left_leg.ini  gazebo_iCubHeidelberg01_right_leg.ini  gazebo_iCubHeidelberg01_robotname.ini  gazebo_iCubHeidelberg01_torso.ini  robotMotorGui.ini  yarpmotorgui.ini
iCubHeidelberg01_model/dae_meshes/: sim_kor_chest_prt.dae  sim_kor_lap_belt_2_prt.dae  (+19 more)
icub/: icub.sdf  icub.sdf~  icub.urdf  icubV1_for_idyntree.xml  icub_old.sdf  model.config  random_tags.sdf
icub_feet_fixed/: icub_feet_fixed.sdf  model.config
icub_fixed/: icub_fixed.sdf  model.config
icub_legs/: icub_legs.sdf  model.config
icub_multiIMU/: icub_multiIMU.sdf  model.config
icub_no_ft/: icub_no_ft.sdf  model.config
icub_on_seesaw/: icub_on_seesaw.sdf  icub_on_seesaw1.sdf  icub_on_seesaw2.sdf  initPos.txt  model.config
icub_with_cameras/: icub.sdf  icub_with_cameras.sdf  left_camera.ini  model.config  right_camera.ini
icub_with_hands/: iCub.sdf  icub_with_hands.sdf  model.config
icub_with_hands_cameras/: icub_with_hands_cameras.sdf  model.config
inclined_plane/: inclined_plane.sdf  model.config
seesaw/: model.config  seesaw.sdf  seesaw.stl  seesaw_mass_properties.dat.1
urdf/: model.urdf
world/: icub.world  icub_fixed.world  icub_legs.world
worlds/: CMakeLists.txt
(+188 files in other folders)
